remove bug align types about session

--- a/src/app/modules/components/projects/projects.component.scss
+++ b/src/app/modules/components/projects/projects.component.scss
@@ -19,6 +19,7 @@
             align-items: center;
             gap: 2em;
             margin-top: 2em;
+            text-align: center;
         
             h3 {
                 &:nth-child(1) {
